handle additional items sorting